--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Saira&display=swap" rel="stylesheet">
 
     <script src="./script.js" defer></script>
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 <body>
     <section>
